using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const string PLAYER_ANIM_BOOL_RUN = "running";
    public const string PLAYER_ANIM_BOOL_DUCK = "duck";
    public const string PLAYER_ANIM_BOOL_JUMP = "jump";
    public const string PLAYER_ANIM_BOOL_ATTACK = "attack";
    public const string PLAYER_ANIM_BOOL_AIR_ATTACK = "airAttack";
    public const string PLAYER_ANIM_BOOL_DUCK_SLASH = "duckSlash";
    public const string PLAYER_ANIM_BOOL_DOUBLE_JUMP = "doubleJump";

    public const string PLAYER_ANIM_BOOL_FALL = "fall";
}